web-infras/parser/tests/fixtures/self-added/let-as-identifier/strict-mode/let-as-value-in-pattern-1/output.txt
[SyntaxError]: unexpect keyword in strict mode (2,6)
2|var [let] = [];
 |    ^
